--- a/_config.yml
+++ b/_config.yml
@@ -1,82 +1,123 @@
 # Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your entire site, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-locale: "en-US"
-title: "Josephine Selvarani Ruth D"
-title_separator: "-"
-name: &name "Josephine Selvarani Ruth D"
-description: &description "DST INSPIRE faculty fellow, RBCCPS, IISc."
-url: "https://djsruth.github.io"
-baseurl: ""
-repository: "djsruth/djsruth.github.io"
-teaser:
-breadcrumbs: false
-words_per_minute: 160
-future: true
-read_more: "disabled"
-talkmap_link: false
-
+locale                   : "en-US"
+title                    : "Josephine Selvarani Ruth D"
+title_separator          : "-"
+name                     : &name "Josephine Selvarani Ruth D"
+description              : &description "DST INSPIRE faculty fellow, RBCCPS, IISc."
+url                      : https://djsruth.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
+repository               : "djsruth/djsruth.github.io"
+teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
+breadcrumbs              : false # true, false (default)
+words_per_minute         : 160
+future                   : true
+read_more                : "disabled" # if enabled, adds "Read more" links to excerpts
+talkmap_link             : false #change to true to add link to talkmap on talks page
 comments:
-  provider: false
-
+  provider               : # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
+  disqus:
+    shortname            :
+  discourse:
+    server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
+  facebook:
+    appid                :
+    num_posts            : # 5 (default)
+    colorscheme          : # "light" (default), "dark"
 staticman:
-  allowedFields: ['name', 'email', 'url', 'message']
-  branch: "gh-pages"
-  commitMessage: "New comment."
-  filename: comment-{@timestamp}
-  format: "yml"
-  moderation: true
-  path: "_data/comments/{options.slug}"
-  requiredFields: ['name', 'email', 'message']
+  allowedFields          : ['name', 'email', 'url', 'message']
+  branch                 : "gh-pages" # "master", "gh-pages"
+  commitMessage          : "New comment."
+  filename               : comment-{@timestamp}
+  format                 : "yml"
+  moderation             : true
+  path                   : "_data/comments/{options.slug}"
+  requiredFields         : ['name', 'email', 'message']
   transforms:
-    email: "md5"
+    email                : "md5"
   generatedFields:
     date:
-      type: "date"
+      type               : "date"
       options:
-        format: "iso8601"
-
+        format           : "iso8601" # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
 atom_feed:
-  path:
+  path                   : # blank (default) uses feed.xml
 
 # SEO Related
-google_site_verification:
-bing_site_verification:
-alexa_site_verification:
-yandex_site_verification:
+google_site_verification :
+bing_site_verification   :
+alexa_site_verification  :
+yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username: &twitter
+  username               : &twitter
 facebook:
-  username:
-  app_id:
-  publisher:
-og_image:
-
-# Structured Social Profiles
+  username               :
+  app_id                 :
+  publisher              :
+og_image                 :  # Open Graph/Twitter default site image
+# For specifying social profiles
+# - https://developers.google.com/structured-data/customize/social-profiles
 social:
-  type: Person
-  name: Josephine Selvarani Ruth D
-  links: []
+  type                   : # Person or Organization (defaults to Person)
+  name                   : # If the user or organization name differs from the site's name
+  links: # An array of links to social media profiles
+
 
 # Analytics
 analytics:
-  provider: "google-universal"
+  provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id:
+    tracking_id          :
+
 
 # Site Author
 author:
-  name: "Josephine Selvarani Ruth D"
-  avatar: "Ruth_sq.jpeg"
-  bio: "Technical Liaison – Skilling<br>(Sep 2023 – Present)<br>ARTPark, Indian Institute of Science (IISc), Bangalore"
-  location: "Indian Institute of Science,<br>Bangalore, Karnataka"
-  googlescholar: "https://scholar.google.com/citations?user=V7Yt7FAAAAAJ&hl=en"
-  email: "rjosephine@iisc.ac.in"
-  email2: "djsruth@gmail.com"
-  mobile: "+91-9487256932"
-  github: "djsruth"
+  name             : "Josephine Selvarani Ruth D"
+  avatar           : "Ruth_sq.jpeg"
+  bio              : "Technical Liaison – Skilling<br>(Sep 2023 – Present)<br>ARTPark, Indian Institute of Science (IISc), Bangalore"
+  location         : "Indian Institute of Science,<br>Bangalore, Karnataka"
+  employer         :
+  pubmed           : 
+  googlescholar    : "https://scholar.google.com/citations?user=V7Yt7FAAAAAJ&hl=en"
+  email2           : "ruth@artpark.in"
+  email            : "djsruth@gmail.com"
+  mobile           : 
+  researchgate     :  
+  uri              :
+  bitbucket        :
+  codepen          :
+  dribbble         :
+  flickr           :
+  facebook         :
+  foursquare       :
+  github           : "djsruth"
+  google_plus      :
+  keybase          :
+  instagram        :
+  impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
+  lastfm           :
+  linkedin         : "https://www.linkedin.com/in/josephine-selvarani-ruth"
+  orcid            : 
+  pinterest        :
+  soundcloud       :
+  stackoverflow    : 
+  steam            :
+  tumblr           :
+  twitter          : 
+  vine             :
+  weibo            :
+  xing             :
+  youtube          :
+  wikipedia        :
+
 
 # Reading Files
 include:
@@ -107,13 +148,12 @@ exclude:
   - package.json
   - tmp
   - vendor
-
 keep_files:
   - .git
   - .svn
-
 encoding: "utf-8"
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
+
 
 # Conversion
 markdown: kramdown
@@ -121,6 +161,7 @@ highlighter: rouge
 lsi: false
 excerpt_separator: "\n\n"
 incremental: false
+
 
 # Markdown Processing
 kramdown:
@@ -132,6 +173,7 @@ kramdown:
   toc_levels: 1..6
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
+
 
 # Collections
 collections:
@@ -163,8 +205,10 @@ collections:
     output: true
     permalink: /:collection/:path/
 
+
 # Defaults
 defaults:
+  # _posts
   - scope:
       path: ""
       type: posts
@@ -175,14 +219,14 @@ defaults:
       comments: true
       share: true
       related: true
-
+  # _pages
   - scope:
       path: ""
       type: pages
     values:
       layout: single
       author_profile: true
-
+  # _teaching
   - scope:
       path: ""
       type: teaching
@@ -191,7 +235,7 @@ defaults:
       author_profile: true
       share: true
       comments: true
-
+  # _pubs-journal-primary
   - scope:
       path: ""
       type: publications
@@ -200,7 +244,7 @@ defaults:
       author_profile: true
       share: true
       comments: true
-
+  # _portfolio
   - scope:
       path: ""
       type: portfolio
@@ -209,7 +253,7 @@ defaults:
       author_profile: true
       share: true
       comment: true
-
+  # _talks
   - scope:
       path: ""
       type: talks
@@ -221,11 +265,15 @@ defaults:
 # Sass/SCSS
 sass:
   sass_dir: _sass
-  style: compressed
+  style: compressed # http://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
+
 
 # Outputting
 permalink: /:categories/:title/
-timezone: America/Los_Angeles
+# paginate: 5 # amount of posts to show
+# paginate_path: /page:num/
+timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+
 
 # Plugins
 plugins:
@@ -234,7 +282,7 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-redirect-from
-
+# mimic GitHub Pages with --safe
 whitelist:
   - jekyll-paginate
   - jekyll-sitemap
@@ -242,11 +290,39 @@ whitelist:
   - jekyll-feed
   - jemoji
 
+
 # Archives
+#  Type
+#  - GitHub Pages compatible archive pages built with Liquid ~> type: liquid (default)
+#  - Jekyll Archives plugin archive pages ~> type: jekyll-archives
+#  Path (examples)
+#  - Archive page should exist at path when using Liquid method or you can
+#    expect broken links (especially with breadcrumbs enabled)
+#  - <base_path>/tags/my-awesome-tag/index.html ~> path: /tags/
+#  - <base_path/categories/my-awesome-category/index.html ~> path: /categories/
+#  - <base_path/my-awesome-category/index.html ~> path: /
 category_archive:
   type: liquid
   path: /categories/
-
 tag_archive:
   type: liquid
   path: /tags/
+# https://github.com/jekyll/jekyll-archives
+# jekyll-archives:
+#   enabled:
+#     - categories
+#     - tags
+#   layouts:
+#     category: archive-taxonomy
+#     tag: archive-taxonomy
+#   permalinks:
+#     category: /categories/:name/
+#     tag: /tags/:name/
+
+
+# HTML Compression
+# - http://jch.penibelst.de/
+compress_html:
+  clippings: all
+  ignore:
+    envs: development
