--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ main:
     url: /talks/    
 
   - title: "Courses"
-    url: /teaching/    
+    url: /Courses/    
         
   - title: "Photos & Videos"
     url: /photos-videos/
